Fix the width of fields so they don’t go too wide

--- a/health/css/ckeditor.css
+++ b/health/css/ckeditor.css
@@ -6922,7 +6922,8 @@ th .checkbox {
 [type='date'],
 [type='time'],
 [type='number'] {
-  width: 100%; }
+  width: 100%;
+  max-width: 42em; }
 
 .progress-bar,
 .progress {
