--- a/health/css/styles.css
+++ b/health/css/styles.css
@@ -6991,7 +6991,8 @@ th .checkbox {
 [type='date'],
 [type='time'],
 [type='number'] {
-  width: 100%; }
+  width: 100%;
+  max-width: 42em; }
 
 .progress-bar,
 .progress {
