--- a/health/sass/components/forms/input/_extends.scss
+++ b/health/sass/components/forms/input/_extends.scss
@@ -26,6 +26,7 @@
 [type='number'] {
   @extend %text-form-element !optional;
   width: 100%;
+  max-width: 42em;
 }
 
 [type='range'] {
